2007-11-04 [paul]	3.0.2cvs116

	* src/addressbook_foldersel.c
		fix gtk critical warning
		Patch by Pawel Pekala

2007-11-04 [paul]	3.0.2cvs115

	* tools/README
	* tools/claws-mail-compose-insert-files.pl
		add --bcc and uri_escape() everything

2007-11-04 [paul]	3.0.2cvs114

	* src/gtk/gtkutils.c
		gtkut_stock_with_text_button_set_create(): set
		GTK_CAN_DEFAULT on buttons 2 and 3

2007-11-03 [paul]	3.0.2cvs113

	* src/common/utils.c
		fix debian bug #448814, 'mailto: URI decoding
		desn't decode the destination address field'
		Patch by Federico Heinz <fheinz@vialibre.org.ar>

2007-11-03 [paul]	3.0.2cvs112

	* AUTHORS
	* src/compose.c
	* src/gtk/authors.h
		allow Bcc in commandline URIs
		(based on) Patch by Federico Heinz <fheinz@vialibre.org.ar>

2007-11-02 [colin]	3.0.2cvs111

	* src/addressbook.c
		Maybe fix bug 1376, 'crash on 
		addressbook manipulation'

2007-10-31 [paul]	3.0.2cvs110

	* src/ldapupdate.c
		fix bug 1375, 'Impossible to modify e-mail
		in LDAP addressbook twice'
		Patch by Michael Rasmussen

2007-10-30 [paul]	3.0.2cvs109

	* configure.ac
		enable GnuTLS support with --enable-gnutls which
		will disable openssl support. if the user has
		gtk >= 2.10.x don't allow gnomeprint even if the
		user asks for it

2007-10-30 [paul]

	3.1.0-rc1 released

2007-10-30 [paul]	3.0.2cvs108

	* Makefile.am
		add ChangeLog.2.0.0-3.0.0 to EXTRA_DIST

2007-10-30 [paul]	3.0.2cvs107

	* src/expldifdlg.c
	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_spelling.c
	* src/prefs_themes.c
	* src/wizard.c
	* src/gtk/gtkaspell.c
	* src/gtk/gtkaspell.h
	* src/plugins/spamassassin/spamassassin_gtk.c
		replace deprecated gtk_option_menu...
		patch by Pawel Pekala

2007-10-29 [colin]	3.0.2cvs106

	* src/plugins/dillo_viewer/dillo_prefs.c
		Fix forgotten signal connect

2007-10-28 [colin]	3.0.2cvs105

	* src/plugins/dillo_viewer/dillo_prefs.c
	* src/plugins/dillo_viewer/dillo_prefs.h
	* src/plugins/dillo_viewer/dillo_viewer.c