@@ -3029,3 +3029,5 @@
 ( cvs diff -u -r 1.5.2.70 -r 1.5.2.71 src/gtk/gtkutils.c;  ) > 3.0.2cvs114.patchset
 ( cvs diff -u -r 1.30.2.24 -r 1.30.2.25 tools/README;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 tools/claws-mail-compose-insert-files.pl;  ) > 3.0.2cvs115.patchset
 ( cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/addressbook_foldersel.c;  ) > 3.0.2cvs116.patchset
+( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/prefs_summary_open.c;  ) > 3.0.2cvs117.patchset
+( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/prefs_summary_open.c;  ) > 3.0.2cvs117.patchset
