@@ -105,11 +105,11 @@ static EntryAction saved_summary_select_prio[6];
 
 static gchar *action_name[7] = 
 {	  ("UNSET (!)"),
-	 N_("Go to first marked email"),
-	 N_("Go to first new email"),
-	 N_("Go to first unread email"),
-	 N_("Go to last opened email"),
-	 N_("Go to last email in the list"),
+	 N_("first marked email"),
+	 N_("first new email"),
+	 N_("first unread email"),
+	 N_("last opened email"),
+	 N_("last email in the list"),
 	 N_("Do nothing")
 };
 
@@ -179,7 +179,7 @@ static void prefs_summary_open_create(void)
 	gtk_widget_grab_default (ok_btn);
 
 	gtk_window_set_title (GTK_WINDOW(window),
-			      _("Action on folder opening"));
+			      _(" Selection when entering a folder"));
 	MANAGE_WINDOW_SIGNALS_CONNECT(window);
 	g_signal_connect (G_OBJECT(window), "delete_event",
 			  G_CALLBACK(prefs_summary_open_deleted),
@@ -225,7 +225,7 @@ static void prefs_summary_open_create(void)
 					    GTK_SHADOW_IN);
 
 	possible_actions_list_view = prefs_summary_open_list_view_create
-				(_("Possible actions"));
+				(_("Possible selections"));
 	gtk_widget_show (possible_actions_list_view);
 	gtk_container_add(GTK_CONTAINER(list_view_scrolledwin), possible_actions_list_view);
 
@@ -261,7 +261,7 @@ static void prefs_summary_open_create(void)
 					    GTK_SHADOW_IN);
 
 	actions_list_view = prefs_summary_open_list_view_create
-					(_("Action on folder opening"));
+					(_("Selection on folder opening"));
 	g_signal_connect (G_OBJECT (del_btn), "clicked",
 			  G_CALLBACK (prefs_summary_open_delete_cb),
 			  actions_list_view);
