@@ -1,3 +1,13 @@
+2007-11-05 [iwkse]	3.0.2cvs117
+
+	* src/prefs_summary_open.c
+		String change
+
+2007-11-05 [iwkse]	3.0.2cvs117
+
+	* src/prefs_summary_open.c
+		String changes
+
 2007-11-04 [paul]	3.0.2cvs116
 
 	* src/addressbook_foldersel.c
